--- a/templates/partials/login_nav.html
+++ b/templates/partials/login_nav.html
@@ -64,7 +64,7 @@
                     <div class="category-inside-1"><a href="{% url 'items:search' %}?name={{name__contains}}&category=hairbeam">헤어빔</a></div>
                 </div>
             </div>
-            <a href="{% url 'home:home' %}" class="login_nav_a"><img src="{% static 'logo/taltal_logo.png' %}" alt="taltal_logo" width="150px"></a>
+            <a href="{% url 'home:home' %}" class="login_nav_a"><img src="{% static 'logo/taltal_logo.PNG' %}" alt="taltal_logo" width="150px"></a>
         </div>
         <div class="flex">
             <form class="search_form" name="name" action="{% url 'items:search' %}" method="GET">
