--- a/templates/payment/cart.html
+++ b/templates/payment/cart.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <div class="second-body">
-    <div><a href="{% url 'home:home' %}"><img src="{% static 'logo/taltal_logo.PNG' %}" alt="taltal_logo" width="150px"></a></div>
+    <div><a href="{% url 'home:home' %}"><img src="{% static 'logo/taltal_logo.jpeg' %}" alt="taltal_logo" width="150px"></a></div>
     <hr>
     <div class="page-title">주문/결제</div>
     <div>
