--- a/templates/users/customer_bucket.html
+++ b/templates/users/customer_bucket.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 <div class="second-body">
-    <a href="{% url 'home:home' %}" class="login_nav_a"><img src="{% static 'logo/taltal_logo.png' %}" alt="taltal_logo" width="150px"></a>
+    <a href="{% url 'home:home' %}" class="login_nav_a"><img src="{% static 'logo/taltal_logo.PNG' %}" alt="taltal_logo" width="150px"></a>
     <div class="bucket-body">
         <div class="page-title"><i class="fas fa-shopping-cart"></i>장바구니</div>
         <table class="width100 bucket-table">
