--- a/templates/home.html
+++ b/templates/home.html
@@ -37,7 +37,7 @@
                 {% for i in black_powder_list %}
                 <div class="home-item-list slide-item2">
                     <a href="{% url 'items:item-detail' i.pk %}"><img src="{{i.first_photo}}" alt="{{i.name}}" width="265px" height="265px"></a>
-                    <div>{{i.name}}</div>
+                    <div class="item-list-name">{{i.name}}</div>
                     <div class="item-price">{{i.price}}<span class="won">원</span></div>
                 </div>
                 {% endfor %}
@@ -57,7 +57,7 @@
                 {% for i in wig_list %}
                 <div class="home-item-list slide-item3">
                     <a href="{% url 'items:item-detail' i.pk %}"><img src="{{i.first_photo}}" alt="{{i.name}}" width="265px" height="265px"></a>
-                    <div>{{i.name}}</div>
+                    <div class="item-list-name">{{i.name}}</div>
                     <div class="item-price">{{i.price}}<span class="won">원</span></div>
                 </div>
                 {% endfor %}
@@ -77,7 +77,7 @@
                 {% for i in hairbeam_list %}
                 <div class="home-item-list slide-item4">
                     <a href="{% url 'items:item-detail' i.pk %}"><img src="{{i.first_photo}}" alt="{{i.name}}" width="265px" height="265px"></a>
-                    <div>{{i.name}}</div>
+                    <div class="item-list-name">{{i.name}}</div>
                     <div class="item-price">{{i.price}}<span class="won">원</span></div>
                 </div>
                 {% endfor %}
