--- a/templates/mixins/pagination.html
+++ b/templates/mixins/pagination.html
@@ -1,13 +1,27 @@
 {% if items %}
     {% if items.has_previous %}
-    <a href="{{request.get_full_path}}&page={{items.number|add:-1}}" class="page-num">이전</a>
+        {% if request.path == "/items/" %}
+        <a href="{{request.get_full_path}}?page={{items.number|add:-1}}" class="page-num">이전</a>
+        {% else %}
+        <a href="{{request.get_full_path}}&page={{items.number|add:-1}}" class="page-num">이전</a>
+        {% endif %}
+        
     {% endif %}
     {% for p in paginator.page_range %}
         {% if p >= items.number|add:-4 and p <= items.number|add:4 %}
-        <a href="{{request.get_full_path}}&page={{p}}" class="page-num {% if p == items.number %}now-page{% endif %}">{{p}}</a>
+            {% if request.path == "/items/" %}
+            <a href="{{request.get_full_path}}?page={{p}}" class="page-num {% if p == items.number %}now-page{% endif %}">{{p}}</a>
+            {% else %}
+            <a href="{{request.get_full_path}}&page={{p}}" class="page-num {% if p == items.number %}now-page{% endif %}">{{p}}</a>
+            {% endif %}
         {% endif %}
     {% endfor %}
     {% if items.has_next %}
-    <a href="{{request.get_full_path}}&page={{items.number|add:1}}" class="page-num">다음</a>
+        {% if request.path == "/items/" %}
+            <a href="{{request.get_full_path}}?page={{items.number|add:1}}" class="page-num">다음</a>
+        {% else %}
+            <a href="{{request.get_full_path}}&page={{items.number|add:1}}" class="page-num">다음</a>
+        {% endif %}
     {% endif %}
+    
 {% endif %}
