--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     {% block home %}{% endblock home %}
     {% block login-signup %}{% endblock login-signup %}
     {% block content %}{% endblock content %}
-
+    {% include "footer.html" %}
     <script>
         var arr = [];
     </script>
