--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
     {% block home %}{% endblock home %}
     {% block login-signup %}{% endblock login-signup %}
     {% block content %}{% endblock content %}
+    {% include 'partials/messages.html' %}
     {% include "footer.html" %}
     <script>
         var arr = [];
