--- a/static/styles.css
+++ b/static/styles.css
@@ -296,6 +296,7 @@ a {
 
 .list-body {
   width: 1100px;
+  min-height: 700px;
   margin-left: auto;
   margin-right: auto;
   margin-top: 10px;
@@ -1389,4 +1390,47 @@ td {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.error {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 5px;
+  background-color: red;
+  height: 32px;
+  width: 300px;
+  color: white;
+  font-weight: 900;
+}
+
+.success {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 5px;
+  background-color: blue;
+  height: 32px;
+  width: 300px;
+  color: white;
+  font-weight: 900;
+}
+
+.info {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: 5px;
+  background-color: gray;
+  height: 35px;
+  width: 300px;
+  color: white;
+  font-weight: 900;
+}
+
+.sending-done-text {
+  text-align: center;
 }
