--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -6,6 +6,7 @@
 </head>
 
 <div class="flex-column-center login-page">
+    {% include 'partials/messages.html' %}
     <a href="{% url 'home:home' %}"><img src="{% static 'logo/taltal_logo.PNG' %}" alt="taltal_logo"></a>
     <form method="POST" action="{% url 'users:login' %}">
         {% csrf_token %}
