--- a/templates/users/sending-password-email-done.html
+++ b/templates/users/sending-password-email-done.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block login-signup %}
-  <div class="sending-eamil-password-done-description">입력하신 이메일로 인증 이메일을 전송했습니다.<br><br>
+
+<div class="list-body">
+  <div class="sending-done-text sending-eamil-password-done-description">
+    입력하신 이메일로 인증 이메일을 전송했습니다.<br><br>
       메일에 기재된 링크를 통해서 비밀번호를 재설정해주세요.
   </div> 
+</div>
+
 {% endblock login-signup %}
