--- a/templates/emails/password_reset_email.html
+++ b/templates/emails/password_reset_email.html
@@ -5,4 +5,4 @@
 <br>
 <div>문의 사항이 있으시면 <span style="font-weight: 900;">taltalrealty@gmail.com</span> 으로 문의 바랍니다.</div>
 <br>
-<div>탈탈샵 서비스 많이 많이 이용해주세요~!</div>
+<div>탈탈샵 많이 많이 이용해주세요~!</div>
