--- a/static/styles.css
+++ b/static/styles.css
@@ -302,6 +302,13 @@ a {
   margin-top: 10px;
 }
 
+.main-img-body {
+  width: 1100px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+}
+
 .item-list {
   display: flex;
   flex-wrap: wrap;
