--- a/templates/partials/main_img.html
+++ b/templates/partials/main_img.html
@@ -1,4 +1,4 @@
-<div class="list-body">
+<div class="main-img-body">
     <div class="category-div">
         <div class="BtnDiv mainBtnDiv">
             <i class="fas fa-chevron-left preBtnMain"></i>
