--- a/templates/emails/verify_email_deploy.html
+++ b/templates/emails/verify_email_deploy.html
@@ -1,7 +1,7 @@
 <h3>탈탈 회원가입 이메일 인증</h3>
 <div>안녕하세요, 아래 "인증 완료하기"를 클릭해서 이메일 인증을 완료하시면 로그인 후 탈탈 서비스 이용이 가능하십니다.</div>
 <br>
-<div><a href="http://taltalshop161-dev.ap-northeast-2.elasticbeanstalk.com/users/verify/{{secret}}" style="font-weight: bold; font-size: 20px;">인증 완료하기</a></div>
+<div><a href="{{DEPLOY_URL}}/users/verify/{{secret}}" style="font-weight: bold; font-size: 20px;">인증 완료하기</a></div>
 <br>
 <div>문의 사항이 있으시면 <span style="font-weight: 900;">taltalrealty@gmail.com</span> 으로 문의 바랍니다.</div>
 <br>
