--- a/templates/users/social_login.html
+++ b/templates/users/social_login.html
@@ -1,12 +1,14 @@
 <div>
-    
+
     <a href="{% url 'users:kakao-login' %}" class="social-login kakao-login">
-        <span class="kakao-logo"><i class="fas fa-comment"></i></span><span class="kakao-letter">카카오 로그인</span><span></span>
+        <span class="kakao-logo"><i class="fas fa-comment"></i></span><span class="kakao-letter">카카오
+            로그인</span><span></span>
     </a>
-    <a href="{% url 'users:naver-login' %}" class="social-login naver-login">
+    <!-- <a href="{% url 'users:naver-login' %}" class="social-login naver-login">
         <span class="naver-logo">N</span><span class="naver-letter">네이버 로그인</span><span></span>
-    </a>
+    </a> -->
     <a href="{% url 'users:github-login' %}" class="social-login github-login">
-        <span class="github-logo"><i class="fab fa-github"></i></span><span class="github-letter">깃허브 로그인</span><span></span>
+        <span class="github-logo"><i class="fab fa-github"></i></span><span class="github-letter">깃허브
+            로그인</span><span></span>
     </a>
 </div>
